--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,16 @@
 db:
   image: mysql
   environment:
-    - MYSQL_ROOT_PASSWORD=password
+    - MYSQL_ROOT_PASSWORD
   volumes:
     - data/mysql:/var/lib/mysql
-    - data/dump:/dump
 web:
-  image: indiepaas/etherpad
+  image: indiehosters/etherpad
   environment:
-    - ETHERPAD_ADMIN_PASSWORD=password
+    - ETHERPAD_ADMIN_PASSWORD
     - ETHERPAD_ADMIN_USER=pierre@ozoux.net 
     - ETHERPAD_PORT=80
   volumes:
     - data/settings:/opt/etherpad-lite/var
   links:
     - db:mysql
-
